--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,10 @@ justify-content: center;
     height: 40px;
     background-color: #4D5AE5;
     border-radius: 40px;
-/* need hover shadow */
+}
+.team-social-item:hover,
+.team-social-item:focus {
+    background-color: #404BBF;
 }
 
 .portfolio-title {
@@ -263,16 +266,37 @@ margin-bottom: 72px;
 }
 .portfolio-list-item {
     width: calc((100% - 2 * 24px) / 3);
-    position: relative;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-cover {
+.portfolio-list-item:hover {
+    border: 1px solid #F4F4FD;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item:hover .portfolio-cover-wrap {
+    transform: translateY(0);
+}
+
+.portfolio-wrap {
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-cover-wrap {
     position: absolute;
     top: 0;
+    height: 100%;
+    padding: 40px 32px 164px;
+    background-color: #4D5AE5;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+.portfolio-cover {
+    
     color:  #F4F4FD;
 line-height: 1.5; 
 letter-spacing: 0.02em;
 }
-/* Need owerfloo */
+
 .portfolio-card {
 padding: 32px 16px;
     width: 100%;
@@ -308,4 +332,31 @@ background-color: #2E2F42;
     color: #F4F4FD;
     line-height: 1.5; 
     letter-spacing: 0.02em;
+}
+.footer-container {
+    max-width: 1158px;   
+    padding: 0 15px 0 15px;  
+    display: flex;
+gap: 120px;
+}
+.footer-social-text {
+    color:#FFF;
+font-weight: 500;
+line-height: 1.5; 
+letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+.footer-social-link {
+    display: flex;
+    gap: 16px;
+}
+.footer-icon {
+    width: 40px;
+    height: 40px;
+    background-color: #4D5AE5;
+    border-radius: 40px;
+}
+.footer-icon:hover,
+.footer-icon:focus {
+background-color: #404BBF;
 }
