--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ background-image: linear-gradient(
     to bottom,
     rgba(46, 47, 66, 0.70),
     rgba(46, 47, 66, 0.70)
-), url(/images/people-office1.jpg);
+), url(./images/people-office1.jpg);
 }
 
 .title-head { 
@@ -243,6 +243,7 @@ justify-content: center;
     height: 40px;
     background-color: #4D5AE5;
     border-radius: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-item:hover,
 .team-social-item:focus {
@@ -354,7 +355,8 @@ letter-spacing: 0.02em;
     width: 40px;
     height: 40px;
     background-color: #4D5AE5;
-    border-radius: 40px;
+    border-radius: 40px;  
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 .footer-icon:hover,
 .footer-icon:focus {
