--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ background-image: linear-gradient(
     to bottom,
     rgba(46, 47, 66, 0.70),
     rgba(46, 47, 66, 0.70)
-), url(/images/people-office1.jpg);
+), url(/images/peopleoffice1.jpg);
 }   
 
 .title-head { 
