--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,10 @@ section {
 }
 .header {
     border-bottom: 1px solid #E7E9FC;
+position: sticky;
+top: 0;
+background-color: #fff;
+z-index: 999;
 }
 .header-container {
     display: flex;
@@ -60,6 +64,18 @@ align-items: center;
     display: flex;
     gap: 40px;
     }
+
+.header-nav-link::after {
+    position: absolute;
+    content: "";
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    background-color:#404BBF;
+bottom: 0;
+left: 0;
+}
+
 .header-link {
 color: inherit;
 font-weight: 500;
@@ -71,6 +87,10 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link:hover,
 .header-link:focus {
+    color: #404BBF;
+}
+.header-nav-link {
+    position: relative;
     color: #404BBF;
 }
 .logo {
@@ -168,13 +188,18 @@ background-color: #404BBF;
 display: flex;
 gap: 24px;
 }
-.features-icon {
+.features-wrap {
     width: 264px;
 height: 112px;
 border-radius: 4px;
 border: 1px solid #8E8F99;
 background: #F4F4FD;
 margin-bottom: 8px;
+}
+.features-icon {
+    width: 100%;
+    height: 100%;
+padding-left: 100px;
 }
 .features-items {
 width: calc((100% - 3 * 24px ) / 4 );
@@ -241,15 +266,26 @@ justify-content: center;
 .team-social-item {
     width: 40px;
     height: 40px;
-    background-color: #4D5AE5;
-    border-radius: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-social-item:hover,
-.team-social-item:focus {
-    background-color: #404BBF;
+.team-soc-link {
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+width: 100%;
+height: 100%;
+display: block;
+border-radius: 50%;
+background-color: #4D5AE5;
 }
 
+.team-soc-link:hover,
+.team-soc-link:focus {
+    background-color: #404BBF;
+}
+.team-soc-icon {
+    width: 100%;
+    height: 100%;
+    padding: 12px;
+    fill: #f4f4fd;
+}
 .portfolio-title {
 color: #2E2F42;
 text-align: center;
@@ -351,14 +387,22 @@ letter-spacing: 0.02em;
     display: flex;
     gap: 16px;
 }
-.footer-icon {
+.footer-wrap {
     width: 40px;
     height: 40px;
+    display: block;
     background-color: #4D5AE5;
-    border-radius: 40px;  
+    border-radius: 50%;  
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
-.footer-icon:hover,
-.footer-icon:focus {
-background-color: #404BBF;
+.footer-wrap:hover,
+.footer-wrap:focus {
+background-color: #31D0AA;
+}
+.footer-icon {
+    width: 100%;
+    height: 100%;
+    fill: #F4F4FD ;
+    padding: 8px;
+
 }
