--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ position: sticky;
 top: 0;
 background-color: #fff;
 z-index: 999;
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); ;
 }
 .header-container {
     display: flex;
@@ -72,7 +73,7 @@ align-items: center;
     height: 4px;
     border-radius: 2px;
     background-color:#404BBF;
-bottom: 0;
+bottom: -1px;
 left: 0;
 }
 
