--- a/css/styles.css
+++ b/css/styles.css
@@ -139,11 +139,12 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #404BBF;
 }
 .title {
+    max-width: 1440px;
     padding: 188px 0;
     color: #FFF;
     text-align: center;
     background:rgba(46, 47, 66, 0.70);
-background-size: 1440px;
+background-size: cover;
 background-repeat: no-repeat;
 background-position: 50% 50%;
 background-image: linear-gradient(
@@ -190,7 +191,9 @@ display: flex;
 gap: 24px;
 }
 .features-wrap {
-    width: 264px;
+    display: flex;
+align-items: center;
+justify-content: center;
 height: 112px;
 border-radius: 4px;
 border: 1px solid #8E8F99;
@@ -198,9 +201,8 @@ background: #F4F4FD;
 margin-bottom: 8px;
 }
 .features-icon {
-    width: 100%;
-    height: 100%;
-padding-left: 100px;
+    width: 64px;
+    height: 64px;
 }
 .features-items {
 width: calc((100% - 3 * 24px ) / 4 );
@@ -272,7 +274,9 @@ justify-content: center;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 width: 100%;
 height: 100%;
-display: block;
+display: flex;
+align-items: center;
+justify-content: center;
 border-radius: 50%;
 background-color: #4D5AE5;
 }
@@ -282,8 +286,8 @@ background-color: #4D5AE5;
     background-color: #404BBF;
 }
 .team-soc-icon {
-    width: 100%;
-    height: 100%;
+    width: 16;
+    height: 16;
     padding: 12px;
     fill: #f4f4fd;
 }
@@ -303,15 +307,15 @@ margin-bottom: 72px;
     flex-wrap: wrap;
 }
 .portfolio-list-item {
+    
     width: calc((100% - 2 * 24px) / 3);
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list-item:hover {
-    border: 1px solid #F4F4FD;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-list-item:hover .portfolio-cover-wrap {
+.portfolio-list-item:hover .portfolio-cover {
     transform: translateY(0);
 }
 
@@ -319,18 +323,17 @@ margin-bottom: 72px;
     position: relative;
     overflow: hidden;
 }
-.portfolio-cover-wrap {
+.portfolio-cover {
     position: absolute;
     top: 0;
+    width: 100%;
     height: 100%;
-    padding: 40px 32px 164px;
+    padding: 40px 32px;
     background-color: #4D5AE5;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-.portfolio-cover {
-    
     color:  #F4F4FD;
+    font-size: 16px;
 line-height: 1.5; 
 letter-spacing: 0.02em;
 }
@@ -375,6 +378,8 @@ background-color: #2E2F42;
     max-width: 1158px;   
     padding: 0 15px 0 15px;  
     display: flex;
+margin-right: 120px;
+align-items: baseline;
 gap: 120px;
 }
 .footer-social-text {
@@ -389,9 +394,11 @@ letter-spacing: 0.02em;
     gap: 16px;
 }
 .footer-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 40px;
     height: 40px;
-    display: block;
     background-color: #4D5AE5;
     border-radius: 50%;  
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
@@ -401,9 +408,7 @@ letter-spacing: 0.02em;
 background-color: #31D0AA;
 }
 .footer-icon {
-    width: 100%;
-    height: 100%;
+    width: 24px;
+    height: 24px;
     fill: #F4F4FD ;
-    padding: 8px;
-
 }
