--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,7 @@ background-image: linear-gradient(
     rgba(46, 47, 66, 0.70),
     rgba(46, 47, 66, 0.70)
 ), url(../images/peopleoffice1.jpg);
+margin: 0 auto;
 }   
 
 .title-head { 
@@ -286,9 +287,6 @@ background-color: #4D5AE5;
     background-color: #404BBF;
 }
 .team-soc-icon {
-    width: 16;
-    height: 16;
-    padding: 12px;
     fill: #f4f4fd;
 }
 .portfolio-title {
